clock todo weather

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <span></span>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
 
     <h2 id="clock">00:00:00</h2>
 
@@ -37,6 +41,7 @@
     <script src="js/quotes.js" defer></script>
     <script src="js/background.js" defer></script>
     <script src="js/todo.js" defer></script>
+    <script src="js/weather.js" defer></script>
 
 </body>
 
